Змінює семантичну структуру сторінки, змінює ранги заголовків, додає спеціальні значення посиланням

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </ul>
         </nav>
         <ul>
-            <li>info@devstudio.com</li>
-            <li>+38 096 111 11 11</li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -27,9 +27,9 @@
             <h1>Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
-        <!--чим ми займаємося-->
+        <!--перелік переваг-->
         <section>
-            <!--перелік-->
+            <h2>Перелік переваг</h2>
             <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -48,6 +48,9 @@
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
+        </section>
+        <!--чим ми займаємося-->
+        <section>
             <h2>Чим ми займаємося</h2>
             <!--фото контент-->
             <ul>
@@ -68,22 +71,22 @@
             <ul>
                 <li>
                     <img src="./images/team-card-1.jpg" alt="Фото Ігор Дем'яненко" width="270"/>
-                    <h4>Ігор Дем'яненко</h4>
+                    <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/team-card-2.jpg" alt="Фото Ольга Рєпіна" width="270"/>
-                    <h4>Ольга Рєпіна</h4>
+                    <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/team-card-3.jpg" alt="Фото Микола Тарасов" width="270"/>
-                    <h4>Микола Тарасов</h4>
+                    <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/team-card-4.jpg" alt="фото Михайло Єрмаков" width="270"/>
-                    <h4>Михайло Єрмаков</h4>
+                    <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -92,9 +95,11 @@
     <footer>
         <a href=""><span>Web</span>Studio</a>
         <address>
-            м. Київ, пр-т Лесі Українки, 26 
-            info@devstudio.com 
-            +38 096 111 11 11
+            <ul>
+                <li><a href="https://goo.gl/maps/gEgkedTg2fkSHyE56" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li> 
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </address>
     </footer>
 </body>
